# hermes-agent

./: hermes_constants.py  hermes_state.py
.github/workflows/: portable-windows.yml
hermes_cli/: banner.py  pty_bridge.py  web_server.py
packaging/portable-windows/: .gitignore  README.md
packaging/portable-windows/launcher/: Cargo.toml  tauri.conf.json
packaging/portable-windows/launcher/icons/: README.md
packaging/portable-windows/launcher/src/: main.rs  paths.rs  usb.rs  wsl.rs
packaging/portable-windows/launcher/ui/: app.js  index.html  style.css
packaging/portable-windows/launcher/ui/locales/: zh-CN.json
packaging/portable-windows/skel/etc/: wsl.conf
packaging/portable-windows/usb-template/: README.txt  autorun.inf  问题排查.txt
scripts/: build_portable_windows.sh
tests/: test_hermes_constants.py
tests/gateway/: test_agent_cache.py  test_run_progress_topics.py
tests/hermes_cli/: test_cmd_update.py  test_web_server_portable.py
tests/run_agent/: test_tool_arg_coercion.py
tests/tui_gateway/: test_make_agent_provider.py  test_protocol.py
