[package]
name = "hermes-launcher"
version = "0.1.0"
edition = "2021"
description = "Hermes Agent portable USB launcher (Windows)"
license = "Apache-2.0"

# The CI workflow + USB layout expect the binary to be named
# `HermesLauncher.exe` (PascalCase, no hyphen) since that is the
# user-facing executable shipped on the stick. Cargo would otherwise
# derive the binary name from `package.name` and produce
# `hermes-launcher.exe`. Pin the binary name explicitly so the path in
# `.github/workflows/portable-windows.yml`
# (`target/.../release/HermesLauncher.exe`) and the assemble step both
# resolve regardless of `--bundles none`.
[[bin]]
name = "HermesLauncher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "system-tray",
    "dialog-ask",
    "dialog-message",
    "shell-open",
    "window-close",
    "window-hide",
    "window-set-focus",
    "window-show",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "z"
