[package]
name = "hermes-launcher"
version = "0.1.0"
edition = "2021"
description = "Hermes Agent portable USB launcher (Windows)"
license = "Apache-2.0"

# The CI workflow + USB layout expect the user-facing executable to be
# named `HermesLauncher.exe` (PascalCase, no hyphen). We do NOT override
# the cargo `[[bin]]` name here because tauri-cli's post-build step
# locates the compiled artifact via `package.name` (i.e.
# `hermes-launcher.exe`) and then renames it to `package.productName`
# from `tauri.conf.json`. Setting `productName = "HermesLauncher"` in
# `tauri.conf.json` makes tauri produce `HermesLauncher.exe`, which is
# the path referenced by `.github/workflows/portable-windows.yml`. The
# Chinese display name is preserved via the window title and the
# USB-staging copy `启动 Hermes 助手.exe`.

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "system-tray",
    "dialog-ask",
    "dialog-message",
    "shell-open",
    "window-close",
    "window-hide",
    "window-set-focus",
    "window-show",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "z"
